--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "eslint-plugin-jest": "^27.2.1",
+    "ethers": "^5.7.1",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
@@ -33,6 +34,7 @@
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.278.0",
     "@ethersproject/bignumber": "^5.7.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "web3": "^1.8.2"
   }
 }
